# moss

./: .cspell.json  .eslintignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README  README.md  TestStruct.ts  analyzer.go  bpm.work  cliff.toml  compass.go  config.go  config.ini  context.go  cspell.config.yaml  decl.go  decl_analyzer.go  default.go  engine.go  explorer.go  flake.nix  go.mod  go.sum  jest.config.ts  main.go  no.go  nocopy.go  package.json  picker.go  pnpm-lock.yaml  pnpm-workspace.yaml  (+16 more)
crates/moss-base/: Cargo.toml
crates/moss-base/src/: collection.rs  exec.rs  lib.rs
crates/moss-configuration/: Cargo.toml  main.tsp  package.json  tsconfig.json
crates/moss-configuration/src/: default_configuration.rs  lib.rs
crates/moss-desktop/: Cargo.toml  build.rs  import.json  importer.py  index.ts  package.json
crates/moss-desktop/bindings/: actions.ts  application.ts  window.ts
crates/moss-desktop/contributions/: main.hcl  test.hcl  test_extend.hcl  test_other_extend.hcl  test_other_extend_2.hcl
crates/moss-desktop/src/: addon_registry.rs  command.rs  contribution.rs  contribution_collector.rs  contribution_registry.rs  lib.rs  menus.rs  services.rs  state.rs
crates/moss-desktop/src/app/: instantiation.rs  lifecycle.rs  manager.rs  mod.rs  service.rs  state.rs  subscription.rs
crates/moss-desktop/src/contributions/: layout_controls.rs  links.rs  mod.rs  resents.rs  workbench.rs
crates/moss-desktop/src/models/: actions.rs  appearance.rs  application.rs  constants.rs  mod.rs  view.rs  window.rs
crates/moss-desktop/src/services/: addon_service.rs  configuration_service.rs  lifecycle_service.rs  locale_service.rs  mod.rs  theme_service.rs  window_service.rs
crates/moss-extension-point/: Cargo.toml
crates/moss-extension-point/src/: extends.rs  interpreter.rs  lib.rs  loader.rs  parser.rs  registry.rs
crates/moss-extension-point/src/interpreter/: types.rs
crates/moss-extension-point/src/module/: configuration.rs  extends.rs  mod.rs
crates/moss-mel/: Cargo.toml
crates/moss-mel/src/: eval.rs  lib.rs  loader.rs  parse.rs
crates/moss-mel/src/foundations/: configuration.rs  mod.rs  scope.rs  token.rs  typ.rs
crates/moss-theme/: Cargo.toml  build.rs  index.ts  main.tsp  package.json  theme_util.py  tspconfig.yaml
crates/moss-theme/bindings/: theme.ts
crates/moss-theme/src/: conversion.rs  lib.rs  schema.rs
crates/moss-theme/src/conversion/: json_converter.rs  jsonschema_validator.rs  util.rs
crates/moss-theme/src/models/: theme.rs
crates/moss-themeconv/: Cargo.toml
crates/moss-themeconv/src/: json_converter.rs  jsonschema_validator.rs  lib.rs  model.rs  util.rs
crates/moss-themeconv/tests/: light-theme.test.json
kernel/pe/: Cargo.toml
kernel/pe/src/: engine.rs  lib.rs
kernel/was/: Cargo.toml
kernel/was/src/: lib.rs  scheduler.rs
lib-rs/moss_ui/: Cargo.toml  build.rs  index.ts  package.json
lib-rs/moss_ui/bindings/: toolbar.ts
lib-rs/moss_ui/src/: lib.rs  parts.rs  toolbar_part.rs
lib-rs/moss_ui/src/parts/: common.rs  toolbar.rs
lib-rs/moss_uikit/: Cargo.toml  index.ts  package.json
lib-rs/moss_uikit/bindings/components/: layout.ts  primitive.ts
lib-rs/moss_uikit/src/: component.rs  layout.rs  lib.rs  primitive.rs  state.rs
lib-rs/moss_uikit/src/component/: accessibility.rs  layout.rs  primitive.rs
lib/analysis/: Cargo.toml
lib/analysis/src/: lib.rs
lib/analysis/src/metric_engine/: mod.rs
lib/analysis/src/policy_engine/: mod.rs  report.rs
lib/common/: Cargo.toml
lib/common/src/: id.rs  lib.rs  thing.rs
lib/manifest/: Cargo.toml
lib/manifest/src/: lib.rs  manifest.rs  model.rs  port.rs
lib/manifest/src/interface/: cache.rs  file.rs  mod.rs
lib/manifest/src/model/: file.rs  ignored.rs  mod.rs
lib/project/: Cargo.toml
lib/project/src/: cache.rs  ignored.rs  lib.rs  project.rs  settings.rs  wt.rs
lib/pwd/: Cargo.toml
lib/pwd/src/: db.rs  init.rs  lib.rs
lib/types/: Cargo.toml
lib/types/src/: asynx.rs  event.rs  file.rs  id.rs  lib.rs  operation.rs  thing.rs
lib/workspace/: Cargo.toml
lib/workspace/src/: lib.rs  manifest.rs  settings.rs
moss-cli/: Cargo.toml
moss-cli/src/: config.rs  lib.rs  loader.rs  run.rs
moss-cli/src/cli/: common.rs  migrate.rs  mod.rs  run.rs  utl.rs
moss-cli/src/migration/: m20220101_000001_initial_schema_up.rs  mod.rs
moss-core/: Cargo.toml
moss-core/src/: lib.rs
moss-core/src/config/: behaver_preference.rs  mod.rs  preference.rs
moss-core/src/filesystem/: mod.rs
moss-core/src/model/: mod.rs  thing.rs
moss-core/src/runtime/: isolate.rs  mod.rs
moss-net/: Cargo.toml
moss-net/src/: config.rs  lib.rs
moss-net/src/api/: gql.rs  mod.rs
moss-net/src/domain/: mod.rs  port.rs
moss-net/src/infra/: mod.rs
mossctl/: Cargo.toml
mossctl/src/: config.rs
mossctl/src/cli/: docs.rs  migrate.rs  mod.rs  run.rs  utl.rs
mossctl/src/migration/: m20220101_000001_initial_schema_up.rs  mod.rs
net/: Cargo.toml
net/src/: config.rs  lib.rs
net/src/domain/: mod.rs  port.rs
net/src/infra/: mod.rs
platform/app/: Cargo.toml  build.rs
platform/app/src/: context.rs  context_compact.rs  context_model.rs  event.rs  executor.rs  lib.rs  model_context.rs  platform.rs
platform/configuration/: Cargo.toml
platform/configuration/common/: Cargo.toml
platform/configuration/src/: common.rs  configuration_default.rs  configuration_model.rs  configuration_parser.rs  configuration_policy.rs  configuration_registry.rs  configuration_service.rs  lib.rs  user_settings.rs
platform/formation/: Cargo.toml
platform/formation/common/: Cargo.toml
platform/formation/src/: context.rs  context2.rs  lib.rs  platform.rs  service_registry.rs
platform/fs/: Cargo.toml
platform/fs/src/: common.rs  lib.rs
platform/project/: Cargo.toml
platform/project/src/: lib.rs  project.rs  settings.rs  wt.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/api/: gql.rs  mod.rs  status.rs
server/src/err/: mod.rs
server/src/graphql/: mod.rs
(+1816 files in other folders)
