# Uncomment for future compilation profiling
# cargo-features = ["profile-rustflags"]

[workspace]
resolver = "1"
members = [
    "view/desktop/bin",
    "cli",
    "tools/xtask",

    "crates/moss-text",
    "crates/moss-fs",
    "crates/moss-jsonlogic",
    "crates/moss-jsonlogic-macro",
    "crates/moss-uikit",
    "crates/moss-html",
    "crates/moss-env",
    "crates/moss-async",
    "crates/moss-collection",
    "crates/moss-theme",
    "crates/moss-cache",
    "crates/moss-addon",
    "crates/moss-tauri", 
    "crates/moss-configuration", 
    "crates/moss-extension-point",
]

[profile.dev]
lto = "thin" # Need this for linkme crate to work

# Uncomment for future compilation profiling
# rustflags = ["-Zself-profile=profiles/clean"]
# rustflags = ["-Ztime-passes"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.bench]
codegen-units = 256
lto = false
opt-level = 3


[workspace.dependencies]
moss_uikit = { path = "crates/moss-uikit" }
moss_html = { path = "crates/moss-html" }
moss_text = { path = "crates/moss-text" }
moss_fs = { path = "crates/moss-fs" }
moss_jsonlogic = { path = "crates/moss-jsonlogic" }
moss_jsonlogic_macro = { path = "crates/moss-jsonlogic-macro" }
moss_env = { path = "crates/moss-env" }
moss_async = { path = "crates/moss-async" }
moss_collection = { path = "crates/moss-collection" }
moss_desktop = { path = "crates/moss-desktop" }
moss_cache = { path = "crates/moss-cache" }
moss_addon = { path = "crates/moss-addon" }
moss_tauri = { path = "crates/moss-tauri" }
moss_theme = { path = "crates/moss-theme" }
moss_configuration = { path = "crates/moss-configuration" }
moss_extension_point = { path = "crates/moss-extension-point" }

smallvec = "1.13.2"
toml = "0.8.19"
linkme = "0.3"
paste = "1.0.15"
dashmap = "6.1.0"
indexmap = "2.7.0"
arcstr = "1.2.0"
bstr = "1.11.0"
ts-rs = "10.1"
thiserror = "2.0"
# Disabled default: compression, common-controls-v6
tauri = { version = "2.0.6", default-features = false, features = [
    "wry",
    "objc-exception",
    "devtools",
    "macos-private-api",
] }
anyhow = "1.0"
hashbrown = "0.15.0"
parking_lot = "0.12.3"
strum = "0.26"
dunce = "1.0.5"
tokio = "1"
smol = "2.0.0"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
phf = "0.11.3"
clap = { version = "4.5.23", features = ["derive"] }
fnv = "1.0.7"
fern = "0.7.0"
rand = "0.8.5"
quote = "1.0"
dirs = "5.0.1"
jsonschema = { version = "0.26.1", default-features = false }
os_info = { version = "3.9.0", default-features = false }
gethostname = "0.5.0"
moka = { version = "0.12.8", features = ["sync"] }
derive_more = "1.0.0"
hcl-rs = "0.18.2"
ctor = "0.2.9"