[package]
name = "moss-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_cli"

[dependencies]
moss-net = { path = "../moss-net" }
moss-core = { path = "../moss-core" }

anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["cargo", "string", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
toml = "0.8.12"
surrealdb = { version = "1.3", features = ["kv-mem"] }
url = { version = "2.5.0", features = ["serde"] }
once_cell = "1.19.0"
