[package]
name = "moss-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_core"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
async-graphql = { version = "7.0", optional = true }
async-trait = "0.1.x"
futures = "0.3.x"
anyhow = "1.0"
smol = "2.0.0"
nanoid = "0.4.x"
revision = "0.5.x"
mlua = { version = "0.9.7", features = [
    "async",
    "lua54",
    "vendored",
    "macros",
    "serialize",
] }


[features]
default = []
gql = ["async-graphql"]
