[package]
name = "moss-net"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_net"

[dependencies]
moss-core = { path = "../moss-core", features = ["gql"] }
was = { path = "../kernel/was" }
metric = { path = "../lib/metric" }

anyhow = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.7"
axum-server = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "full",
    "signal",
    "macros",
    "rt-multi-thread",
] }
tower = "0.4"
tower-http = { version = "0.5.2", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }
thiserror = "1.0.58"
serde_json = "1.0.115"
async-trait = "0.1.x"
toml = "0.8.12"
chrono = { version = "0.4.37", features = ["serde"] }
once_cell = "1.19.0"
tokio-util = "0.7.10"
tokio-stream = { version = "0.1.15", features = ["sync"] }
opentelemetry = "0.22.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sea-orm = "0.12.x"
futures = "0.3.x"
