[package]
name = "mossctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_cli"

[dependencies]
net = { path = "../net" }
dl = { path = "../lib/dl" }

anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["cargo", "string", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
once_cell = "1.19.0"
tokio-util = "0.7.10"
sea-orm = { version = "0.12.x", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-uuid",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"


[dependencies.sea-orm-migration]
version = "0.12.0"
features = []
