[package]
name = "mossctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_cli"

[dependencies]
net.workspace = true
dl.workspace = true

tracing.workspace = true
anyhow.workspace = true
once_cell.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }

clap = { version = "4.5.4", features = ["cargo", "string", "derive"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
sea-orm = { version = "0.12.x", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-uuid",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dependencies.sea-orm-migration]
version = "0.12.0"
features = []
