[package]
name = "mossctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_cli"

[dependencies]
fs.workspace = true
seaorm_utl.workspace = true
types.workspace = true
net.workspace = true
tracing.workspace = true
anyhow.workspace = true
once_cell.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
graphql-parser.workspace = true
app.workspace = true

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["cargo", "string", "derive"] }
toml.workspace = true
url = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[dependencies.sea-orm-migration]
workspace = true
features = []
