[package]
name = "net"
version = "0.1.0"
edition = "2021"

[lib]
name = "moss_net"

[dependencies]
fs.workspace = true
disp.workspace = true
dl.workspace = true
file = { workspace = true, features = ["graphql"] }
conf = { workspace = true, features = ["graphql"] }
common = { workspace = true, features = ["graphql"] }
analysis.workspace = true

thiserror.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
once_cell.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "full",
    "signal",
    "macros",
    "rt-multi-thread",
] }
chrono = { workspace = true, features = ["serde"] }

async-graphql-axum = "7.0"
axum = "0.7"
axum-server = "0.6"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5.2", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }
toml = "0.8.12"
tokio-stream = { version = "0.1.15", features = ["sync"] }
opentelemetry = "0.22.0"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
notify = "6.1.1"
