[package]
name = "net"
version = "0.1.0"
edition = "2021"


[lib]
name = "moss_net"

[dependencies]
fs.workspace = true
project = { workspace = true, features = ["graphql"] }
bus.workspace = true
pwd.workspace = true
dbutl.workspace = true
graphql_utl.workspace = true
graphql_mac.workspace = true
file = { workspace = true, features = ["graphql"] }
conf = { workspace = true, features = ["graphql"] }
common = { workspace = true, features = ["graphql"] }
analysis.workspace = true
notify.workspace = true
chrono = { workspace = true, features = ["serde"] }
once_cell.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = [
    "full",
    "signal",
    "macros",
    "rt-multi-thread",
] }
thiserror.workspace = true
bitflags.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sea-orm.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
jsonwebtoken.workspace = true
toml.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
axum-server.workspace = true
futures-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true
http.workspace = true
async-stream.workspace = true
hashbrown.workspace = true

[dependencies.sea-orm-migration]
workspace = true
features = []
