[package]
name = "net"
version = "0.1.0"
edition = "2021"


[lib]
name = "moss_net"

[dependencies]
fs.workspace = true
project = { workspace = true, features = ["graphql"] }
manifest = { workspace = true, features = ["graphql"] }
mac.workspace = true
bus.workspace = true
pwd.workspace = true
seaorm_utl.workspace = true
graphql_utl.workspace = true
graphql_mac.workspace = true
conf = { workspace = true, features = ["graphql"] }
types = { workspace = true, features = ["graphql"] }

once_cell.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bitflags.workspace = true
anyhow.workspace = true
hashbrown.workspace = true

notify.workspace = true
toml.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

futures.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = [
    "full",
    "signal",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true, features = ["sync"] }
async-stream.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

sea-orm.workspace = true
serde_json.workspace = true

async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
axum-server.workspace = true

jsonwebtoken.workspace = true
tower.workspace = true
http.workspace = true
tower-http = { workspace = true, features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }


[dependencies.sea-orm-migration]
workspace = true
features = []
