[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.7"
axum-server = "0.6"
futures-util = "0.3"
surrealdb = { version = "1.3", features = ["kv-mem"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "full",
    "signal",
    "macros",
    "rt-multi-thread",
] }
tower = "0.4"
tower-http = { version = "0.5.2", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }
