[package]
name = "moss_base"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
im.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
dunce.workspace = true
radix_trie.workspace = true
hashbrown = { workspace = true }
