[package]
name = "moss_configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
moss_extension_point.workspace = true
arcstr.workspace = true
hashbrown = { workspace = true }
tracing.workspace = true
hcl-rs.workspace = true
