[package]
name = "moss_desktop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moss_text.workspace = true
moss_uikit.workspace = true
moss_jsonlogic.workspace = true
moss_jsonlogic_macro.workspace = true
moss_html.workspace = true
moss_cache.workspace = true
moss_addon.workspace = true
moss_theme.workspace = true


strum.workspace = true
smol.workspace = true
indexmap = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
ts-rs = { workspace = true, features = ["indexmap-impl", "serde-json-impl"] }
once_cell.workspace = true
serde_json.workspace = true
tauri.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
anyhow.workspace = true
hashbrown.workspace = true
quote.workspace = true
thiserror.workspace = true
linkme.workspace = true
paste.workspace = true
dirs.workspace = true
log.workspace = true
fnv.workspace = true
smallvec.workspace = true
toml.workspace = true
derive_more = { workspace = true, features = ["full"] }
