[package]
name = "moss_extension_point"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
hcl-rs.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
parking_lot.workspace = true
ctor.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
arcstr = { workspace = true, features = ["serde"] }
tracing.workspace = true
phf = { workspace = true, features = ["macros"] }
petgraph = "0.7"
strum = { workspace = true, features = ["derive"] }
