[package]
name = "moss_mel"
version = "0.1.0"
edition = "2021"

[dependencies]
hcl-rs.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
hashbrown = { workspace = true, features = ["serde"] }
arcstr = { workspace = true, features = ["serde"] }
petgraph.workspace = true
strum = { workspace = true, features = ["derive"] }
