[package]
name = "moss_themeconv"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
desktop_models.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
indexmap = { workspace = true, features = ["serde"] }

[features]
default = ["json"]
json = []
