[package]
name = "pe"
version = "0.1.0"
edition = "2021"
description = "Policy Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs.workspace = true
anyhow.workspace = true
futures.workspace = true
disp.workspace = true
async-graphql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol = "2.0.0"
async-stream = "0.3.5"
