[package]
name = "was"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metric = { path = "../../lib/metric" }

tokio = "1.37.0"
notify = "6.1.1"
mlua = { version = "0.9.7", features = ["async", "lua54", "vendored"] }
anyhow = "1.0"
async-trait = "0.1.80"
chrono = { version = "0.4.37", features = ["serde"] }
