[package]
name = "moss_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
specta.workspace = true
specta-typescript = "0.0.7"

[dependencies]
moss_uikit.workspace = true
moss_hecs.workspace = true

specta-typescript = "0.0.7"
serde = { workspace = true, features = ["derive"] }
specta.workspace = true
