[package]
name = "moss_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moss_uikit.workspace = true
moss_specta.workspace = true

typeshare = "1.0.0"
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
specta.workspace = true
specta-typescript.workspace = true
