[package]
name = "moss_uikit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
typeshare = "1.0.0"

anyhow.workspace = true
specta.workspace = true
specta-typescript.workspace = true
serde = { workspace = true, features = ["derive"] }
moss_specta.workspace = true
