[package]
name = "analysis"
version = "0.1.0"
edition = "2021"


[dependencies]
fs.workspace = true
anyhow.workspace = true
futures.workspace = true
disp.workspace = true
common.workspace = true
async-graphql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full", "signal", "macros"] }
smol = "2.0.0"
async-stream = "0.3.5"
notify = "6.1.1"
