[package]
name = "common"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
async-graphql = { workspace = true, optional = true }
nanoid.workspace = true
sea-orm.workspace = true


[features]
default = []
graphql = ["async-graphql"]
