[package]
name = "manifest"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { workspace = true, features = ["graphql"] }
dbutl.workspace = true

async-trait.workspace = true
anyhow.workspace = true
hashbrown.workspace = true

serde = { workspace = true, features = ["derive"] }

sea-orm.workspace = true

async-graphql = { workspace = true, optional = true }

tokio = { workspace = true, features = ["full", "signal", "macros"] }

[dependencies.sea-orm-migration]
workspace = true
features = []

[features]
default = []
graphql = ["async-graphql"]
