[package]
name = "project"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { workspace = true, features = ["graphql"] }
manifest.workspace = true

hashbrown.workspace = true
anyhow.workspace = true

serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true

async-graphql = { workspace = true, optional = true }


[features]
default = []
graphql = ["async-graphql"]
