[package]
name = "project"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { workspace = true, features = ["graphql"] }
workspace.workspace = true
mac.workspace = true

hashbrown.workspace = true
anyhow.workspace = true
smol.workspace = true
async-trait.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true


async-graphql = { workspace = true, optional = true }

tokio = { workspace = true, features = ["full", "signal", "macros"] }


[features]
default = []
graphql = ["async-graphql"]
