[package]
name = "pwd"
version = "0.1.0"
edition = "2021"
description = "Project Work Directory"


[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
async-trait.workspace = true
futures.workspace = true
fs.workspace = true
common.workspace = true
tracing.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

[dependencies.sea-orm-migration]
workspace = true
features = []
