[package]
name = "pwd"
version = "0.1.0"
edition = "2021"
description = "Project Work Directory"


[dependencies]
fs.workspace = true
types.workspace = true
workspace.workspace = true
mac.workspace = true

anyhow.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
async-trait.workspace = true

serde_json.workspace = true

futures.workspace = true

tracing.workspace = true
