[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true

nanoid.workspace = true
serde = { workspace = true, features = ["derive"] }

async-graphql = { workspace = true, optional = true }

sea-orm.workspace = true


[features]
default = []
graphql = ["async-graphql"]
