[package]
name = "workspace"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { workspace = true, features = ["graphql"] }
seaorm_utl.workspace = true
fs.workspace = true

async-trait.workspace = true
anyhow.workspace = true
hashbrown.workspace = true
smol.workspace = true
sha2.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonpath_lib.workspace = true

sea-orm.workspace = true

async-graphql = { workspace = true, optional = true }

tokio = { workspace = true, features = ["full", "signal", "macros"] }

[dependencies.sea-orm-migration]
workspace = true
features = []

[features]
default = []
graphql = ["async-graphql"]
