[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
flume = "0.11.0"

hashbrown.workspace = true
ahash.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
chrono.workspace = true
derive_more.workspace = true
async-task.workspace = true
async-executor.workspace = true
slotmap.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

smol.workspace = true

tokio = { workspace = true, features = ["full"] }
futures.workspace = true

tracing.workspace = true


waker-fn = "1.2.0"
