[package]
name = "configuration"
version = "0.1.0"
edition = "2021"


[dependencies]
base.workspace = true
parking_lot.workspace = true
lazy-regex.workspace = true
async-trait.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
schemars.workspace = true
tracing.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [] }
radix_trie.workspace = true
