[package]
name = "platform_formation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moss_std.workspace = true

platform_core.workspace = true

fnv.workspace = true
slotmap.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
anyhow.workspace = true

flume.workspace = true
async-task.workspace = true
im.workspace = true
dyn-clone.workspace = true
once_cell.workspace = true
smallvec.workspace = true
