[package]
name = "platform_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true

smol = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[features]
default = []
disk = ["smol", "libc"]
