[package]
name = "project"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { workspace = true, features = ["graphql"] }
workspace.workspace = true
mac.workspace = true
async_utl.workspace = true
fs.workspace = true

hashbrown.workspace = true
anyhow.workspace = true
smol.workspace = true
async-trait.workspace = true
radix_trie.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

async-graphql = { workspace = true, optional = true }

futures.workspace = true
tokio = { workspace = true, features = ["full", "signal", "macros"] }
async-stream.workspace = true

tracing.workspace = true


[features]
default = []
graphql = ["async-graphql"]
